--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI = "mongodb+srv://wolfie:d92waZTrlfhBjsVg@cluster0.d3xwc.mongodb.net/TodoTracker?retryWrites=true&w=majority"
+MONGO_URI = "mongodb+srv://admin:XfpB7TgqLc1T0aJS@waveback-cluster.6jv8s.mongodb.net/waveback-cluster?retryWrites=true&w=majority"
 PORT = 3001
 CLIENT_ORIGIN = 'http://todotracker.cs.stonybrook.edu:8080'
 CLIENT_LOCAL_ORIGIN = 'http://localhost:8080'
