--- a/client/package.json
+++ b/client/package.json
@@ -34,11 +34,10 @@
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
     "lodash": "^4.17.15",
-    "materialize-css": "^1.0.0-rc.2",
     "nodemailer": "^6.4.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-materialize": "^3.9.3",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-spinners": "^0.9.0",
