--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "react-spotify-web-playback": "^0.7.0",
+    "spotify-web-sdk": "^0.7.0",
+    "typescript": "^4.0.5",
     "validator": "^13.1.1",
     "xss-clean": "^0.1.1"
   }
