--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@types/spotify-web-playback-sdk": "^0.1.7",
     "apollo-server": "^2.14.5",
     "apollo-server-express": "^2.14.5",
     "bcryptjs": "^2.4.3",
