--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "react-beautiful-dnd": "^13.0.0",
+    "react-select-country-list": "^2.2.1",
     "react-spotify-web-playback": "^0.8.1",
     "spotify-web-sdk": "^0.7.0",
     "typescript": "^4.0.5",
