--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URI = "mongodb+srv://admin:XfpB7TgqLc1T0aJS@waveback-cluster.6jv8s.mongodb.net/waveback-cluster?retryWrites=true&w=majority"
 PORT = 3001
-CLIENT_ORIGIN = 'http://todotracker.cs.stonybrook.edu:8080'
+CLIENT_ORIGIN = 'https://waveback416.herokuapp.com/'
 CLIENT_LOCAL_ORIGIN = 'http://localhost:8080'
 SERVER_LOCAL_DOMAIN = 'http://localhost'
 
