--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm start",
     "server": "nodemon",
-    "start": " concurrently \"npm:server\" \"npm:client\" "
+    "start": " concurrently \"npm:server\" \"npm:client\" ",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
