--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,8 @@
     "react-transition-group": "^4.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0"
+  },
+  "engines": {
+    "node": "12.x.x"
   }
 }
